# iplanrio-desafio-data-eng

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  prefect.yaml  pyproject.toml
api/: Dockerfile  pyproject.toml
api/app/: db.py  main.py
api/app/routes/: terceirizados.py
app/: db.py  main.py
app/routes/: terceirizados.py
config/: sync_gcs_config.yml
docs/: doc.md
dw/: dbt_project.yml
dw/models/: sources.yml
dw/models/core/dim_orgaos/: dim_orgaos.sql  schema.yml
dw/models/core/dim_orgaos_superiores/: dim_orgaos_superiores.sql  schema.yml
dw/models/core/dimensions/dim_categoria_profissional/: dim_categoria_profissional.sql  schema.yml
dw/models/core/dimensions/dim_contratos/: dim_contratos.sql  schema.yaml  schema.yml
dw/models/core/dimensions/dim_orgaos/: schema.yml
dw/models/core/dimensions/dim_orgaos_superiores/: schema.yml
dw/models/core/dimensions/dim_periodo/: dim_periodo.sql  schema.yml
dw/models/core/dimensions/dim_terceirizado/: schema.yml
dw/models/core/dimensions/dim_terceirizados/: dim_terceirizados.sql  schema.yml
dw/models/core/facts/: fact_contrato_terceirizados.sql  fact_contratos_terceirizados.sql  schema.yml
dw/models/mart/: app_terceirizados.sql  mart_contratos_terceirizados.sql  schema.yml
dw/models/staging/: brutos_terceirizados.sql
dw/models/staging/raw/: brutos_tercerizados.sql  schema.yml
pipelines/gov_terceirizados/: flow.py
pipelines/gov_tercerizados/: Dockerfile  flow.py  prefect.yaml  pyproject.toml
pipelines/raw_terceirizados/: flow.py
scripts/: fetch_terceirizados_data.py  sync_gcs.py
