[project]
name = "dw-project-iplanrio"
version = "0.1.0"
description = "Orquestração Prefect + dbt"
requires-python = ">=3.11,<3.13"

dependencies = [
    "prefect==3.4.9",
    "prefect-dbt>=0.7.0rc1",
    "dbt-core==1.8.2",       # Subindo para a .2 que é mais estável
    "dbt-duckdb==1.8.2",     # Casando exatamente com o core
    "protobuf==4.25.3",
    "python-dotenv",
    "prefect-docker",
    "google-cloud-storage>=3.9.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.3",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "openpyxl>=3.1.5",
    "lxml>=6.0.2",
    "black>=25.12.0",
    "sqlfluff>=4.0.4",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
    "black"
]

